--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
+    "next": "^14.2.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
