--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^6.8.0",
     "next": "^14.2.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vercel": "^37.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.1",
