--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/src/index.ts"
         }
     ]
 }
